# vibes

./: .env.example  .gitignore  .linear.toml  .mcp.json  AGENTS.md  CLAUDE.md  INITIAL.md  README.md  TASK_7_COMPLETION_SUMMARY.md  TEST_REPORT_vibesbox_integration.md  ToDo.md  pytest.ini  test_mcp_connection.py  vibes.code-workspace
.agents/: README.md
.claude/: global-rules.md
.codex/: README.md  config.toml
.devcontainer/: Dockerfile  Dockerfile.minimal  Dockerfile.ultra-minimal  README.md  TROUBLESHOOTING.md  devcontainer.json  devcontainer.json.backup  docker-compose.yml  docker-compose.yml.backup
.github/: copilot-instructions.md
docs/: README.md  ai-pydantic.md  architecture.md  building-mcp-with-llm.md  claude-capabilities.md  claude-context-prompt.md  claude_desktop_config.json  claude_desktop_config_full.json  codex-artifacts.md  codex-bootstrap.md  codex-config.md  codex-validation.md  config.toml  examples.md  migration-archon-to-skills.md  setup-linux.md  setup-mac.md  setup-windows.md  setup.md  what-is-vibes.md
infra/task-manager/backend/: .dockerignore  Dockerfile  pyproject.toml
infra/task-manager/backend/alembic/versions/: 001_create_tables.py
infra/task-manager/backend/src/: main.py  mcp_server.py
infra/task-manager/backend/src/api/: tasks.py
infra/task-manager/backend/src/config/: __init__.py
infra/task-manager/backend/src/models/: task.py
infra/task-manager/backend/src/services/: __init__.py  task_service.py
infra/task-manager/backend/tests/: README.md  __init__.py  conftest.py  test_mcp.py
infra/vibesbox/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
infra/vibesbox/src/: command_executor.py  mcp_server.py  models.py  security.py  session_manager.py
infra/vibesbox/tests/: __init__.py  test_command_executor.py  test_integration.py  test_mcp_server.py  test_security.py  test_session_manager.py
mcp/: README.md  (+1 more)
(+1246 files in other folders)
