[project]
name = "vibesbox"
version = "1.0.0"
description = "Lightweight containerized MCP server for secure command execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # MCP server framework
    "fastmcp>=2.0.0",
    # Data validation
    "pydantic>=2.0.0",
    # ASGI server
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-subprocess>=1.5.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
